# magma_clmm_sdk

./: .gitignore  README.md  package-lock.json  package.json
calc_almm/: Cargo.toml
calc_almm/pkg/: package.json
calc_almm/src/: bit_math.rs  lib.rs  price.rs  swap_result.rs  u128x128.rs  uint_safe.rs
calc_dlmm/: Cargo.toml  build.sh  package.json
calc_dlmm/src/: bit_math.rs  constants.rs  lib.rs  price.rs  swap_result.rs  u128x128.rs
src/: lock_tx.ts  locks_tx.ts  sdk.ts
src/config/: mainnet.ts  testnet.ts
src/errors/: errors.ts
src/math/: almmStrategy.ts  almmWeightToAmounts.ts  bin.ts  clmm.ts  dlmmStrategy.ts  dlmmWeightToAmounts.ts  index.ts
src/modules/: almm.ts  almmPoolModule.ts  configModule.ts  dlmm.ts  gauge.ts  gaugeModule.ts  index.ts  lockModule.ts  poolModule.ts  positionModule.ts  rewarderModule.ts  swapModule.ts
src/types/: almm.ts  clmm_type.ts  config_type.ts  dlmm.ts  gauge.ts  index.ts  lock_type.ts  sui.ts
src/utils/: common.ts  transaction-util.ts
