[package]
name = "calc_almm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
alloy-primitives = { version = "0.8.21", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = "0.2.100"
